<resources>
    <string name="app_name">MamamApp</string>

    <string name="detail_title">Detail</string>
    <string name="favorite_title">Favorite</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <string name="search_hint">Search by Name..</string>
    <string name="filter">Filter</string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="category_area">Category - Area</string>
    <string name="instruction">Instructions:</string>
    <string name="ingredient">Ingredients:</string>
    <string name="video">Video</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet consectetur adipiscing elit duis. Feugiat vivamus at augue eget arcu dictum varius duis.</string>
    <string name="btn_submit">Submit</string>
    <string name="error_message">an error occurred while fetching data</string>
    <string name="error_data">An error occurred while passing data</string>
    <string name="search_error">Meals not found</string>
    <string name="add_favorite">Added to Favorite</string>
    <string name="remove_favorite">Removed from Favorite</string>
    <string name="fav_empty">Lets add your favorite movie!</string>

    <string-array name="filter">
        <item>Category</item>
        <item>Area</item>
    </string-array>
</resources>