<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_poster_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_poster_placeholder"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:background="@color/light_gray"
                android:contentDescription="@string/image"
                android:scaleType="fitXY"
                app:shapeAppearanceOverlay="@style/Bottom_Corner_Radius" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_title_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:background="@color/light_gray"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_category_area_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_poster_placeholder"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/tv_category_area_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_poster_placeholder"
            tools:text="@string/category_area" />

        <TextView
            android:id="@+id/tv_video_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_title_placeholder"
            app:layout_constraintTop_toBottomOf="@id/tv_title_placeholder"
            tools:text="@string/video" />

        <ImageView
            android:id="@+id/youtube_player_placeholder"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_gray"
            android:contentDescription="@string/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_video_placeholder" />

        <TextView
            android:id="@+id/tv_ingredient_title_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_title_placeholder"
            app:layout_constraintTop_toBottomOf="@id/youtube_player_placeholder"
            tools:text="@string/ingredient" />

        <TextView
            android:id="@+id/tv_ingredient_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@color/light_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tv_category_area_placeholder"
            app:layout_constraintStart_toStartOf="@id/tv_title_placeholder"
            app:layout_constraintTop_toBottomOf="@id/tv_ingredient_title_placeholder" />

        <TextView
            android:id="@+id/tv_instruction_title_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray"
            android:text="@string/instruction"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_title_placeholder"
            app:layout_constraintTop_toBottomOf="@id/tv_ingredient_placeholder" />

        <TextView
            android:id="@+id/tv_instruction_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="20dp"
            android:background="@color/light_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_category_area_placeholder"
            app:layout_constraintStart_toStartOf="@id/tv_title_placeholder"
            app:layout_constraintTop_toBottomOf="@id/tv_instruction_title_placeholder" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
